--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "artemisgcp",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "homepage": "./",
   "main": "./public/electron.js",
   "description": "annotation UI for classification of behaviors in video",
@@ -39,7 +40,8 @@
     "react-timelines": "^2.6.1",
     "reactjs-popup": "^2.0.4",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "electron-squirrel-startup": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
