--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,20 @@
-name: Release
-on:
-  push:
-    tags:
-      - 'v*'
+name: Build
+on: [push, pull_request]
 
 jobs:
-
-  publish_on_linux:
+  build_on_linux:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2       
+    - uses: actions/checkout@v2
     - uses: actions/setup-node@master
       with:
         node-version: 14
     - name: install dependencies
       run: npm install
-    - name: publish
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: npm run publish
+    - name: build
+      run: npm run make
 
-  publish_on_mac:
+  build_on_mac:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
@@ -29,9 +23,19 @@ jobs:
         node-version: 14
     - name: install dependencies
       run: npm install
-    - name: publish
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: npm run publish
+    - name: build
+      run: npm run make
       
+  build_on_win:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@master
+      with:
+        node-version: 14
+    - name: install dependencies
+      run: npm install
+    - name: build
+      run: npm run make
+
   
