--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "electron-is-dev": "^1.2.0",
+    "electron-squirrel-startup": "^1.0.0",
     "express-fileupload": "^1.2.1",
     "http-proxy-middleware": "^0.21.0",
     "morgan": "^1.10.0",
     "nodemon": "^1.19.4",
+    "octokit": "^1.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
@@ -40,8 +42,7 @@
     "react-timelines": "^2.6.1",
     "reactjs-popup": "^2.0.4",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2",
-    "electron-squirrel-startup": "^1.0.0"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -120,17 +121,17 @@
     }
   },
   "devDependencies": {
-    "concurrently": "^6.2.0",
-    "cross-env": "^7.0.3",
-    "electron": "^13.1.4",
-    "electron-builder": "^22.11.7",
-    "electron-packager": "^15.2.0",
-    "wait-on": "^6.0.0",
     "@electron-forge/cli": "^6.0.0-beta.54",
     "@electron-forge/maker-deb": "^6.0.0-beta.54",
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "@electron-forge/publisher-github": "^6.0.0-beta.54"
+    "@electron-forge/publisher-github": "^6.0.0-beta.54",
+    "concurrently": "^6.2.0",
+    "cross-env": "^7.0.3",
+    "electron": "^13.1.4",
+    "electron-builder": "^22.11.7",
+    "electron-packager": "^15.2.0",
+    "wait-on": "^6.0.0"
   }
 }
